# statsforecast-diy_medium

./: .env.example  .gitignore  README.md  SETUP.md  config.py  m5_training.ipynb  models.py  pyproject.toml  requirements.txt  setup.py  setup.sh
